# Money_Never_Sleep

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Money.code-workspace  Money_Never_sleep.code-workspace  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/superpowers/mns-stage-delivery/: SKILL.md
.superpowers/brainstorm/: .last-token
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src/: main.js  preload.js
apps/web/: README.md  index.html
apps/web/src/: app.js  mockData.js  styles.css
docs/: agent-handoff.md  architecture.md  decision-log.md  improvement-backlog.md  information-map.md  reference-integration-map.md  references.md  roadmap.md  stages.md
docs/superpowers/plans/: 2026-07-01-single-stock-analysis-platform.md  2026-07-01-stage-2-a-share-data-layer.md  2026-07-01-stage-3-tradingagents-engine.md  2026-07-01-stage-4-report-history.md  2026-07-01-stage-5-10-task-watchdog.md  2026-07-01-stage-5-11-web-task-controls.md  2026-07-01-stage-5-12-web-task-history.md  2026-07-01-stage-5-13-task-retry-backoff.md  2026-07-01-stage-5-14-task-retry-policy.md  2026-07-01-stage-5-15-task-retry-observability.md  2026-07-01-stage-5-16-real-news-provider.md  2026-07-01-stage-5-17-runtime-auto-tradingagents.md  2026-07-01-stage-5-18-runtime-market-flash.md  2026-07-01-stage-5-19-runtime-announcement-headlines.md  2026-07-01-stage-5-5-http-api.md  2026-07-01-stage-5-6-http-task-queue.md  2026-07-01-stage-5-7-task-persistence.md  2026-07-01-stage-5-8-task-controls.md  (+10 more)
scripts/: README.md
services/api/: README.md
(+96 files in other folders)
