[project]
name = "money-never-sleep"
version = "0.1.0"
description = "Finance and stock analysis workspace for Money_Never_sleep"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
markers = [
	"network: tests requiring external network access",
	"external_engine: tests requiring optional external analysis engines",
]
